--- a/src/components/Anmeldelser.astro
+++ b/src/components/Anmeldelser.astro
@@ -15,7 +15,7 @@ import Link from '../components/Link.astro';
   <Button></Button>
       </div>
       <!-- Titel -->
-      <h2 class="text-2xl md:text-3xl font-semibold">Vinflasker</h2>
+      <h3 class="text-2xl md:text-3xl font-semibold">Anmeldelser</h3>
       <!-- Vinshop Knap -->
                      <a href="/"><Button>Se Trustpilot</Button></a>
 
@@ -29,12 +29,12 @@ import Link from '../components/Link.astro';
             <div class="flex justify-center text-black">
               ★★★★★
             </div>
-            <h3 class="text-lg font-bold text-gray-800">Enkel og overkommelig luksus</h3>
-            <p class="text-gray-600 text-sm leading-relaxed">
+            <p class="text-mmb md:text-m">Enkel og overkommelig luksus</p>
+            <p class="text-smb md:text-s leading-relaxed">
               "Jeg elsker vin, men jeg hader at stå i supermarkedet og være usikker på, hvad jeg skal vælge. Denne vinabonnementstjeneste har været en gave! 8 flasker for kun 599 kr..."
             </p>
           </div>
-          <p class="text-gray-800 font-medium mt-auto">- Susanne Iversen</p>
+          <p class="text-smb md:text-s mt-auto">- Susanne Iversen</p>
         </div>
 
         <!-- Review 2 -->
@@ -43,12 +43,12 @@ import Link from '../components/Link.astro';
             <div class="flex justify-center text-black">
               ★★★★★
             </div>
-            <h3 class="text-lg font-bold text-gray-800">Perfekt til vinelskeren på budget</h3>
-            <p class="text-gray-600 text-sm leading-relaxed">
+            <p class="text-mmb md:text-m">Perfekt til vinelskeren på budget</p>
+            <p class="text-smb md:text-s leading-relaxed">
               "Jeg er ikke en vinkender, men jeg kan godt lide at prøve forskellige vine, og denne tjeneste er perfekt..."
             </p>
           </div>
-          <p class="text-gray-800 font-medium mt-auto">- Søren Larsen</p>
+          <p class="text-smb md:text-s mt-auto">- Søren Larsen</p>
         </div>
 
         <!-- Review 3 -->
@@ -57,12 +57,12 @@ import Link from '../components/Link.astro';
             <div class="flex justify-center text-black">
               ★★★★☆
             </div>
-            <h3 class="text-lg font-bold text-gray-800">Nemt og fleksibelt</h3>
-            <p class="text-gray-600 text-sm leading-relaxed">
+            <p class="text-mmb md:text-m">Nemt og fleksibelt</p>
+            <p class="text-smb md:text-s">
               "Jeg var lidt skeptisk i starten, men nu er jeg helt solgt. Det er fantastisk, hvor nemt det er..."
             </p>
           </div>
-          <p class="text-gray-800 font-medium mt-auto">- Nynne Jensen</p>
+          <p class="text-smb md:text-s mt-auto">- Nynne Jensen</p>
         </div>
 
         <!-- Review 4 -->
@@ -71,12 +71,12 @@ import Link from '../components/Link.astro';
             <div class="flex justify-center text-black">
               ★★★★★
             </div>
-            <h3 class="text-lg font-bold text-gray-800">Fik mig til at prøve nye vine</h3>
-            <p class="text-gray-600 text-sm leading-relaxed">
+            <p class="text-mmb md:text-m">Fik mig til at prøve nye vine</p>
+            <p class="text-smb md:text-s">
               "Jeg har længe drukket de samme vine igen og igen, men denne abonnementsordning har virkelig åbnet mine øjne..."
             </p>
           </div>
-          <p class="text-gray-800 font-medium mt-auto">- Mathias Christensen</p>
+          <p class="text-smb md:text-s mt-auto">- Mathias Christensen</p>
         </div>
       </div>
     </div>
