--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -6,15 +6,15 @@ const {cardimage="", cardimagealt="", navn="", land="", aarstal="",}= Astro.prop
 import Link from "../components/Link.astro";
 ---
 
-<article class="card @container border-1 border-black lg:px-2 px-12 pb-4">
+<article class="card @container border-1 border-brown lg:px-2 px-12 pb-4">
     <div class="flex flex-col h-full">
         <div class="relative pt-4">
             <img src={cardimage} alt={cardimagealt} class="object-cover w-full">
         </div>
         <div class="grid grid-cols-3 grid-rows-2 ">
-    <h3 class="pl-2 text-left lg:text-h5 text-h5_mobil font-bold col-span-2 row-span-2  ">{navn}</h3>
-    <h3 class="pl-2 text-left lg:text-h5 text-h5_mobil font-bold place-self-end">{land}</h3>
-    <h3 class="pl-2 text-left lg:text-h5 text-h5_mobil font-bold place-self-end">{aarstal}</h3>
+    <p class="text-mmb md:text-l pl-2 text-left col-span-2 row-span-2  ">{navn}</p>
+    <p class="text-mmb md:text-l pl-2 text-left place-self-end">{land}</p>
+    <p class="text-mmb md:text-l pl-2 text-left place-self-end">{aarstal}</p>
     </div>
         <Button>Læs mere</Button>
     </div>  
