--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -12,9 +12,9 @@ import Link from "../components/Link.astro";
             <img src={cardimage} alt={cardimagealt} class="object-cover w-full">
         </div>
         <div class="grid grid-cols-3 grid-rows-2 ">
-    <p class="text-mmb md:text-l pl-2 text-left col-span-2 row-span-2  ">{navn}</p>
-    <p class="text-mmb md:text-l pl-2 text-left place-self-end">{land}</p>
-    <p class="text-mmb md:text-l pl-2 text-left place-self-end">{aarstal}</p>
+    <p class="text-m md:text-l pl-2 text-left col-span-2 row-span-2  ">{navn}</p>
+    <p class="text-m md:text-l pl-2 text-left place-self-end">{land}</p>
+    <p class="text-m md:text-l pl-2 text-left place-self-end">{aarstal}</p>
     </div>
         <Button>Læs mere</Button>
     </div>  
