--- a/src/pages/tak.astro
+++ b/src/pages/tak.astro
@@ -7,10 +7,10 @@ import thumbsup from "../assets/images/thumbsup.png";
 import betaltegning from "../assets/images/betaltegning.svg";
 import taktegning from "../assets/images/taktegning.svg";
 ---
-<MainLayout title="Titel">
+<MainLayout title="Tak for din bestilling">
 
 <!-- Købsflow Side -->
-<section class="text-black px-8">
+<section class="text-black">
   <div class="grid grid-cols-1 md:grid-cols-6 mx-auto">
     <!-- Venstre Illustration -->
     <div class="hidden md:block md:col-span-2 items-center	">
@@ -25,25 +25,25 @@ import taktegning from "../assets/images/taktegning.svg";
   <div class="border border-black p-6 md:p-12 inline-block text-center">
 
     <!-- Titel -->
-    <h2 class="text-xl md:text-3xl font-bold text-red-700 mb-6">
+    <h2 class="mb-6">
       TAK FOR DIN BESTILLING
     </h2>
 
 
       <!-- Overskrift -->
-      <p class="text-xl mb-6">
-        Kære <span class="font-medium">[ Kundens navn ]</span>,
+      <p class="text-smb md:text-m mb-6">
+        Kære <span class="">[ Kundens navn ]</span>,
       </p>
 
       <!-- Hovedtekst -->
-      <p class="text-lg leading-relaxed mb-6">
+      <p class="text-smb md:text-m leading-relaxed mb-6">
         Velkommen til vores vinklub. Dit abonnement er bekræftet, og du vil indenfor få minutter modtage en mail 
         med en oversigt over dit køb. Du modtager vinen inden for 
         <strong>7 arbejdsdage</strong>, og du har allerede nu fuld adgang til alle de fordele og funktioner, vi tilbyder.
       </p>
 
       <!-- Ekstra Besked -->
-      <p class="text-lg leading-relaxed mb-8">
+      <p class="text-smb md:text-m leading-relaxed mb-8">
         Kan du ikke få nok af vin? Udforsk vores vinshop via knappen nedenfor.
       </p>
 
